# ViralBite

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: agents.py  analysis_tools.py  chat_tools.py  collection_agent.py  eda_agent.py  graph.py  graph_state.py  llm_client.py  main.py  report_formatter.py  schemas.py  tools.py  utils.py  youtube_collector.py
app/artifacts/: latest_query_results.csv
app/static/: app.js  styles.css
app/templates/: index.html
